www/static/develop/css/css.css
/* ... */
.infographics-cont .more-info {padding-top: 5px;text-align: right;}

.form-cont .labelcont{text-align: right;}
.form-cont .labelcont label{font-size: 14px;text-transform: uppercase;}
.form-cont .inp-cont{min-height: 40px;position: relative;}
.form-cont .textarea{background:white;}
.form-cont .inp-cont.error input[type="text"],
.form-cont .inp-cont.error input[type="password"]{border:1px solid #EF8680;}
.form-cont .inp-cont.error select{border:1px solid #EF8680;}
.form-cont .inp-cont.error textarea{border:1px solid #EF8680;}
.form-cont .inp-cont.error .inform {padding: 5px;background: #FFE5E6; color: #da0c0c;}
.form-cont .inp-cont .required-star{color: #FF0000;position: absolute;right: -10px;top: -5px;font-size: 14px;}
.form-cont .notice-cont{font-size: 10px;border: 1px solid #cfd0d5;background: linear-gradient(to bottom, #fdfdfd, #bfc3c6);padding: 5px;}
.form-cont .inform {color: #7F7F7F;font-size: 11px;display: block;}
.form-cont .btn-next{line-height: 47px;position: relative;width: 207px;}

.form-cont input[type="text"]:focus,
.form-cont input[type="password"]:focus{border-color: #66afe9;box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);}
.form-cont select:focus {border-color: #66afe9;box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);}
.form-cont textarea:focus {border-color: #66afe9;box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);}

.menu-cont3 {border-bottom: 3px solid #323b45;overflow: hidden;text-transform: uppercase;border-top-left-radius: 4px;border-top-right-radius: 4px;border-bottom-right-radius: 0;border-bottom-left-radius: 0;background-color: #e0e0e0;min-height: 28px;}
.menu-cont3 .catalog-title {float: left;background: #424a53;color: #ffffff;padding: 8px 0 5px 0;width: 170px;text-align: center;border-top-left-radius: 4px;border-top-right-radius: 0;border-bottom-right-radius: 0;border-bottom-left-radius: 0;position: relative;height: 28px;}
.menu-cont3 .catalog-title .separator {width: 8px;height: 28px;position: absolute;top: 0;right: -1px;bottom: auto;left: auto;background: url(/static/develop/images/right-gray-angle.png) no-repeat;}
.menu-cont3 .subs-links-cont {float: left;padding-left: 10px;font-size: 11px;}
.menu-cont3 .subs-links-cont a {display: block;float: left;padding: 8px 0 0px 0;height: 28px;}
.menu-cont3 .subs-links-cont .separator {width: 20px;height: 28px;float: left;background: url(/static/develop/images/right-gray-slash.png) no-repeat;}
.menu-cont3 .other-link {display: block;padding: 7px 20px 0px 0;font-size: 10px;text-align: right;}
.menu-cont3 .other-link span{font-size: 14px;}

.coupon-item-cont {float:left;display: block;position: relative;font-size: 14px;background: #fff;margin: 1%;box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);text-decoration: none;cursor: pointer;max-width: 341px;}
.coupons-cont .coupon-item-cont{width: 31%;}
.coupon-item-cont:hover .slide-cont {bottom: 0;}
.coupon-item-cont:hover {box-shadow: 0 1px 4px rgba(0, 0, 0, 0.5);color: #333;text-decoration: none;}
.coupon-item-cont .img-cont {width: 100%;overflow: hidden;position: relative;text-align: center;max-height: 255px;}
.coupon-item-cont .img-cont img{max-width: 100%}
.coupon-item-cont .discount-label {width: 50px;height: 35px;text-align: center;color: white;font-size: 18px;position: absolute;top: 0px;left: 10px;padding-top: 5px;line-height: 25px;text-decoration: none;background-color: #f6753e;border-radius: 0px 0px 10px 10px;}
.coupon-item-cont .slide-cont {width: 100%;height: 214px;position: absolute;bottom: -214px;left: 0;transition: all 0.5s ease-out;}
.coupon-item-cont .geo-cont {color: #ffffff;position: absolute;bottom: 28px;background-color: #333;background: rgba(0, 0, 0, 0.4);width: 100%}
.coupon-item-cont .geo-cont .geo-items {margin: 4px 0;overflow: hidden;}
.coupon-item-cont .geo-cont .geo-items li {font-size: 14px;float: left;padding-left: 7px;margin: 0 3px 0 5px;line-height: 12px;position: relative;}
.coupon-item-cont .addr-item {width: 5px;height: 5px;border-radius: 10px;position: absolute;top: 3px;left: 0;}
.coupon-item-cont .data-cont {color: #ffffff;height: 28px;position: absolute;bottom: 0px;background-color: #333;background: rgba(0, 0, 0, 0.6);width: 100%;}
.coupon-item-cont .data-cont span {font-size: 14px;}
.coupon-item-cont .time-cont {float: left;padding: 6px 5px 4px 28px;}
.coupon-item-cont .number-cont {float: right;padding: 6px 10px 4px 27px;}
.coupon-item-cont .info-cont {position: absolute;bottom: 0;width: 100%;padding: 12px;overflow: hidden;background-color: #333;background: rgba(0, 0, 0, 0.8);}
.coupon-item-cont .likes-cont {width: 33px;height: 31px;float: right;color: white;line-height: 32px;}
.coupon-item-cont .price-cont {border-top: 1px solid #eaebec;overflow: hidden;height: 28px;}
.coupon-item-cont .price {float: left;padding: 5px;font-size: 14px;padding: 7px 0 4px 20px;text-decoration: line-through;}
.coupon-item-cont .separator {width: 9px;height: 27px;position: absolute;top: 0;left: 0;}
.coupon-item-cont .discounted {float: right;font-size: 20px;color: #fff;background: #f6753e;padding: 2px 10px 0px 20px;text-align: right;height: 28px;width: 49%;position: relative;}
.coupon-item-cont .discount-label span {font-size: 12px;position: relative;top: -3px;}
.coupon-item-cont .description-cont {padding: 3px 8px 0;overflow: hidden;line-height: 17px;display: block;height: 40px; }

.graytheme *{color: #3B3B3B; font-size: 14px; line-height: 1.5;}
.graytheme p{padding-bottom: 10px;}
.graytheme h2{font-size: 24px;  padding-bottom: 10px;}
.graytheme h3{font-size: 20px;  padding-bottom: 10px;}
.graytheme h4{font-size: 16px;  padding-bottom: 10px;}
.graytheme ul li{border-top: 1px solid #e5e5e5; padding:10px;list-style:none;}


/* layout */
.module{margin-bottom: 10px;}
/* end layout */

/* pages */

/* end pages */

.cropper-actions{margin-top: 5px;}
.cropper-actions .btn{margin-right: 5px;}
/* ... */

